--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,6 @@ plangházi-régi/
 Win-scripts/
 *.iml
 *.ini
+Unity/
+Java/Java-régi/merleghazi/
+C#/prog_lecke/Functions/Properties/AssemblyInfo.cs
