--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,4 @@ Win-scripts/
 Unity/
 Java/Java-régi/merleghazi/
 C#/prog_lecke/Functions/Properties/AssemblyInfo.cs
+C++/Haladó_c++/time_count/time_count.depend
