--- a/.gitignore
+++ b/.gitignore
@@ -380,3 +380,6 @@ Unity/
 Java/Java-régi/merleghazi/
 C#/prog_lecke/Functions/Properties/AssemblyInfo.cs
 C++/Haladó_c++/time_count/time_count.depend
+C#/prog_lecke/Functions/konv/
+C#/prog_lecke/graf/SDL2-CS/
+C#/prog_lecke/terkep/
