mentés mert összegyült

--- a/.gitignore
+++ b/.gitignore
@@ -383,3 +383,11 @@ C++/Haladó_c++/time_count/time_count.depend
 C#/prog_lecke/Functions/konv/
 C#/prog_lecke/graf/SDL2-CS/
 C#/prog_lecke/terkep/
+ai/
+*/glad/glad.h
+
+C++/grafika/*/include/
+C++/grafika/libs/
+
+C++/grafika/*/lib-mingw/
+pyton/venv/
