--- a/C++/grafika/hazi1/hazi1.cbp
+++ b/C++/grafika/hazi1/hazi1.cbp
@@ -43,6 +43,7 @@
 		<Unit filename="Drawable.h" />
 		<Unit filename="Pen.h" />
 		<Unit filename="Vertices.h" />
+		<Unit filename="game.cpp" />
 		<Unit filename="game.h" />
 		<Unit filename="glad.c">
 			<Option compilerVar="CC" />
